--- a/IdeaKeeper/app/src/main/res/values/strings.xml
+++ b/IdeaKeeper/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Idea Keeper</string>
+    <string name="app_name">Idea Keeper Beta</string>
+    <string name="search_title">Search</string>
 </resources>
