--- a/IdeaKeeper/app/src/main/res/values/strings.xml
+++ b/IdeaKeeper/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Idea Keeper Beta</string>
     <string name="search_title">Search</string>
+    <string name="menu_item_notification">Notification</string>
+    <string name="view_navigation_open">Open</string>
+    <string name="view_navigation_close">Close</string>
 </resources>
